--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get: ^4.6.5
   get_storage: ^2.0.3
   image_picker: ^0.8.4+11
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
